Fix changes-detected dialog text (i18n pointing to wrong entry)

--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -13,7 +13,7 @@
       <%= I18n.t "save_changes_modal.body" %>
    </div>
    <div class="modal-footer">
-      <button id="saveChangesButton" class="btn btn-primary"><%= I18n.t "save_changes_modal.body" %></button>
+      <button id="saveChangesButton" class="btn btn-primary"><%= I18n.t "save_changes_modal.save" %></button>
       <button id="dismissChangesButton" class="btn"><%= I18n.t "save_changes_modal.dismiss" %></button>
       <button class="btn btn-cancel" data-dismiss="modal"><%= I18n.t "actions.cancel" %></button>
    </div>
