--- a/frontend/app/views/users/index.html.erb
+++ b/frontend/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
    </div>
    <div class="span9">
     <div class="record-pane">
-      <div class="btn-group">
+      <div class="btn-group pull-right">
         <%= link_to "#{I18n.t("actions.create")} #{I18n.t("user._html.singular")}", {:controller => :users, :action => :new}, :class => "btn" %>
       </div>
 
