--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -10,6 +10,8 @@
      <%= readonly_context @agent.agent_type.intern, @agent.to_hash(true) do |readonly| %>
         <h2><%= @agent.names[0]['sort_name'] %>  <span class="label label-info"><%= I18n.t("agent._html.singular") %></span></h2>
 
+        <%= render :partial => "shared/flash_messages" %>
+
         <div class="row-fluid">
           <section id="agent_details">
             <h3><%= I18n.t("agent._html.section.basic_information") %></h3>
@@ -22,7 +24,7 @@
         </div>
 
         <div class="row-fluid">
-          <section id="primary_name">
+          <section id="names">
             <h3><%= I18n.t("agent_name._html.plural") %></h3>
             <div class="accordion details" id="agent_name_accordion">
               <% @agent.names.each_with_index do | name, index | %>
