--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -23,6 +23,7 @@
                 <li><%= link_to I18n.t("subject._html.plural"), :controller => :subjects, :action => :index %></li>
                 <li><%= link_to I18n.t("agent._html.plural"), :controller => :agents, :action => :index %></li>
                 <li><%= link_to I18n.t("location._html.plural"), :controller => :locations, :action => :index %></li>
+                <li><%= link_to I18n.t("event._html.plural"), :controller => :events, :action => :index %></li>
                 <li><%= link_to I18n.t("collection_management_record._html.plural"), :controller => :collection_management_records, :action => :index %></li>
               </ul>
             </li>
