--- a/frontend/app/views/subjects/show.html.erb
+++ b/frontend/app/views/subjects/show.html.erb
@@ -10,6 +10,8 @@
      <%= readonly_context :subject, @subject.to_hash do |readonly| %>
       <h2><%= @subject.display_string %>  <span class="label label-info"><%= I18n.t("subject._html.singular") %></span></h2>
 
+      <%= render :partial => "shared/flash_messages" %>
+
       <section id="basic_information">
         <h3><%= I18n.t("subject._html.section.basic_information") %></h3>
 
