Introduce a readonly Location#title to contain the display string of provided values

--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -145,6 +145,9 @@ $(function() {
           success: function(html) {
             $container.html(html);
             AS.resetScrollSpy();
+          },
+          error: function(obj, errorText, errorDesc) {
+            $container.html("<div class='alert alert-error'><p>An error occurred loading this form.</p><pre>"+errorDesc+"</pre></div>")
           }
         });
 
