--- a/frontend/app/views/locations/_linker.html.erb
+++ b/frontend/app/views/locations/_linker.html.erb
@@ -1,6 +1,6 @@
 <%
   if form.obj.has_key?('_resolved')
-    selected_json =  Location.from_hash(form.obj['_resolved']).to_json
+    selected_json =  form.obj['_resolved'].to_json
   else
     selected_json = "{}"
   end
@@ -19,7 +19,7 @@
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
             data-selected='<%= selected_json %>'
             data-multiplicity="one"
-            data-format_template_id="linker_location_template"
+            data-format_template="title"
             data-types='["location"]'
           />
           <div class="btn-group pull-right">
