--- a/frontend/app/views/linked_agents/_show.html.erb
+++ b/frontend/app/views/linked_agents/_show.html.erb
@@ -2,24 +2,27 @@
    section_id = "linked_agent" if section_id.blank?
 %>
 
-<section id="<%= section_id %>">
+<section id="<%= section_id %>" class="subrecord-form-dummy">
   <h3><%= I18n.t("linked_agent._html.plural") %></h3>
-  <div class="row-fluid">
-    <div class="span3"><strong><%= I18n.t("linked_agent.role") %></strong></div>
-    <div class="span8"><strong><%= I18n.t("linked_agent.ref") %></strong></div>
-  </div>
-  <% linked_agents.each_with_index do | link, index | %>
-  <% puts "LINK #{link.inspect}" %>
-    <div class="row-fluid">
-      <div class="span3 pull1">
-        <%= I18n.t("linked_agent.role_#{link["role"]}") %>
+  <div class="subrecord-form-container">
+    <div class="subrecord-form-fields">
+      <div class="row-fluid">
+        <div class="span3"><strong><%= I18n.t("linked_agent.role") %></strong></div>
+        <div class="span8"><strong><%= I18n.t("linked_agent.ref") %></strong></div>
       </div>
-      <div class="span8 token-list">
-        <%= render_token :object => link, 
-                         :label => link["_resolved"]["names"][0]["sort_name"], 
-                         :type => link["_resolved"]["agent_type"], 
-                         :uri => link["_resolved"]["uri"] %>
-      </div>
+      <% linked_agents.each_with_index do | link, index | %>
+        <div class="row-fluid">
+          <div class="span3 pull1">
+            <%= I18n.t("linked_agent.role_#{link["role"]}") %>
+          </div>
+          <div class="span8 token-list">
+            <%= render_token :object => link, 
+                             :label => link["_resolved"]["names"][0]["sort_name"], 
+                             :type => link["_resolved"]["agent_type"], 
+                             :uri => link["_resolved"]["uri"] %>
+          </div>
+        </div>
+      <% end %>
     </div>
-  <% end %>
+  </div>
 </section>
