--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -21,12 +21,12 @@
 
 <div id="confirmation_modal_template"><!--
    <div class="modal-body">
-      {if defined(message) && message.length > 0}
+      {if defined('message') && message.length > 0}
         ${message}
       {/if}
    </div>
    <div class="modal-footer">
-      <button id="confirmButton" class="btn btn-primary"><%= I18n.t "actions.confirm" %></button>
+      <button id="confirmButton" class="btn btn-primary {if defined('confirm_class') && confirm_class} ${confirm_class}{/if}">{if defined('confirm_label') && confirm_label}${confirm_label}{else}<%= I18n.t "actions.confirm" %>{/if}</button>
       <button class="btn btn-cancel" data-dismiss="modal"><%= I18n.t "actions.cancel" %></button>
    </div>
 --></div>
