--- a/frontend/app/views/welcome/index.html.erb
+++ b/frontend/app/views/welcome/index.html.erb
@@ -1,11 +1,7 @@
 <%= setup_context :title => "Home", :suppress_breadcrumb => true %>
 
 <div class="row-fluid">
-   <% if flash[:error] %>
-      <div class="alert alert-error">
-         <%= flash[:error] %>
-      </div>
-   <% end %>
+   <%= render :partial => "shared/flash_messages" %>
 
    <div class="span12">
       <h1><%= I18n.t "welcome.heading" %></h1>
