WIP Add selenium test for Record Lifecycles, namely deleting an accession; Also modify the jsonmodel_client#find to throw a RecordNotFound if no records are returned;

--- a/frontend/app/views/groups/index.erb
+++ b/frontend/app/views/groups/index.erb
@@ -6,7 +6,7 @@
 
   <div class="span9">
     <div class="record-pane">
-     <div class="btn-group">
+     <div class="btn-group pull-right">
        <%= link_to "#{I18n.t("actions.create")} #{I18n.t("group._html.singular")}", {:controller => :groups, :action => :new}, :class => "btn" %>
      </div>
 
