--- a/frontend/app/views/accessions/_toolbar.html.erb
+++ b/frontend/app/views/accessions/_toolbar.html.erb
@@ -7,7 +7,7 @@
             <% if user_can?('manage_repository') %>
               <div class="btn-group">
                 <div class="btn btn-small btn-inline-form">
-                  <%= button_to I18n.t("actions.unsuppress"), {:controller => :accessions, :action => :unsuppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-primary",  :"data-confirmation" => true, :"data-title" => I18n.t("actions.unsuppress_confirm_title"), :"data-message" => I18n.t("actions.unsuppress_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.unsuppress")}" %>
+                  <%= button_to I18n.t("actions.unsuppress"), {:controller => :accessions, :action => :unsuppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-primary unsuppress-record",  :"data-confirmation" => true, :"data-title" => I18n.t("actions.unsuppress_confirm_title"), :"data-message" => I18n.t("actions.unsuppress_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.unsuppress")}" %>
                 </div>
               </div>
             <% end %>
@@ -29,12 +29,12 @@
             <% if controller.action_name === "show" and user_can?('manage_repository') %>
               <div class="btn-group">
                 <div class="btn btn-inline-form">
-                  <%= button_to I18n.t("actions.suppress"), {:controller => :accessions, :action => :suppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-warning", :"data-confirmation" => true, :"data-title" => I18n.t("actions.suppress_confirm_title"), :"data-message" => I18n.t("actions.suppress_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.suppress")}", :"data-confirm-btn-class" => "btn-warning" %>
+                  <%= button_to I18n.t("actions.suppress"), {:controller => :accessions, :action => :suppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-warning suppress-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.suppress_confirm_title"), :"data-message" => I18n.t("actions.suppress_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.suppress")}", :"data-confirm-btn-class" => "btn-warning" %>
                 </div>
               </div>
               <div class="btn-group">
                 <div class="btn btn-inline-form">
-                  <%= button_to I18n.t("actions.delete"), {:controller => :accessions, :action => :delete, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-danger", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
+                  <%= button_to I18n.t("actions.delete"), {:controller => :accessions, :action => :delete, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-danger delete-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
                 </div>
               </div>
             <% end %>
