Add page title for 403 and 404 pages

--- a/frontend/app/views/404.erb
+++ b/frontend/app/views/404.erb
@@ -1,3 +1,4 @@
+<%= setup_context :title => I18n.t("errors.error_404") %>
 <div class="alert alert-error">
   <h2><%= I18n.t("errors.error_404") %></h2>
   <p><%= I18n.t("errors.error_404_message") %></p>
