--- a/frontend/app/views/403.erb
+++ b/frontend/app/views/403.erb
@@ -1,3 +1,4 @@
+<%= setup_context :title => I18n.t("errors.error_403") %>
 <div class="alert alert-error">
   <h2><%= I18n.t("errors.error_403") %></h2>
   <p><%= I18n.t("errors.error_403_message") %></p>
