--- a/frontend/app/views/accessions/_toolbar.html.erb
+++ b/frontend/app/views/accessions/_toolbar.html.erb
@@ -3,19 +3,9 @@
     <div class="span12">
       <div class="record-toolbar">
         <div class="pull-right">
-          <% if @accession.suppressed %>
-            <% if user_can?('manage_repository') %>
-              <div class="btn-group">
-                <div class="btn btn-small btn-inline-form">
-                  <%= button_to I18n.t("actions.unsuppress"), {:controller => :accessions, :action => :unsuppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-primary unsuppress-record",  :"data-confirmation" => true, :"data-title" => I18n.t("actions.unsuppress_confirm_title"), :"data-message" => I18n.t("actions.unsuppress_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.unsuppress")}" %>
-                </div>
-              </div>
-            <% end %>
-          <% else %>
-            <div class="btn-group">
-              <% if controller.action_name === "show" %>
-                <%= link_to I18n.t("actions.edit"), {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn btn-small" %>
-              <% end %>
+          <div class="btn-group">
+            <% if not @accession.suppressed %>
+              <%= link_to I18n.t("actions.edit"), {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn btn-small" %>
               <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">
                 <%= I18n.t "actions.spawn" %>
                 <span class="caret"></span>
@@ -25,19 +15,27 @@
                   <%= link_to "<span class='icon-resource'></span> #{I18n.t("resource._html.singular")}".html_safe, :controller => :resources, :action => :new, :accession_id => @accession.id %>
                 </li>
               </ul>
-            </div>
-            <% if controller.action_name === "show" and user_can?('manage_repository') %>
+            <% end %>
+          </div>
+          <% if user_can?('manage_repository') %>
+            <% if @accession.suppressed %>
+              <div class="btn-group">
+                <div class="btn btn-small btn-inline-form">
+                  <%= button_to I18n.t("actions.unsuppress"), {:controller => :accessions, :action => :unsuppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-primary unsuppress-record",  :"data-confirmation" => true, :"data-title" => I18n.t("actions.unsuppress_confirm_title"), :"data-message" => I18n.t("actions.unsuppress_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.unsuppress")}" %>
+                </div>
+              </div>
+            <% else %>
               <div class="btn-group">
                 <div class="btn btn-inline-form">
                   <%= button_to I18n.t("actions.suppress"), {:controller => :accessions, :action => :suppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-warning suppress-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.suppress_confirm_title"), :"data-message" => I18n.t("actions.suppress_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.suppress")}", :"data-confirm-btn-class" => "btn-warning" %>
                 </div>
               </div>
-              <div class="btn-group">
-                <div class="btn btn-inline-form">
-                  <%= button_to I18n.t("actions.delete"), {:controller => :accessions, :action => :delete, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-danger delete-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
-                </div>
-              </div>
             <% end %>
+            <div class="btn-group">
+              <div class="btn btn-inline-form">
+                <%= button_to I18n.t("actions.delete"), {:controller => :accessions, :action => :delete, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-danger delete-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
+              </div>
+            </div>
           <% end %>
         </div>
       </div>
