Add ability to view a repository and setup routes to include the repo_code;

--- a/public/app/assets/stylesheets/archivesspace/header.less
+++ b/public/app/assets/stylesheets/archivesspace/header.less
@@ -32,3 +32,24 @@
 .navbar .input-prepend .btn {
   margin-right: -1px;
 }
+
+.branding-container {
+  position: relative;
+}
+
+.repo-selector {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #444;
+  .border-radius(0 0 4px 4px);
+  padding: 2px 5px;
+  color: white;
+  min-width: 120px;
+  .opacity(70);
+
+  &:hover {
+    .opacity(100);
+  }
+
+}
