--- a/public/app/views/site/_header.html.erb
+++ b/public/app/views/site/_header.html.erb
@@ -11,32 +11,34 @@
           <li <% if controller_name === "site" and controller.action_name === "index" %>class="active"<% end %>>
             <%= link_to raw('<span class="icon-home"></span>'), :controller => :site, :action => :index %>
           </li>
-          <li class="divider-vertical"></li>
-          <li class="dropdown browse-container">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t("actions.browse") %> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-            </ul>
-          </li>
-          <li>
-            <%= form_tag(url_for(:controller => :site, :action => :search), :method => :get, :class => "navbar-form pull-left") do %>
-              <div class="input-append">
-                <input id="global-search-box" type="text" class="span2" placeholder="<%= I18n.t("navbar.search_placeholder") %>" name="q" value="<%= params[:q] %>"/>
-                <div class="btn-group">
-                  <%= hidden_field_tag "type", "" %>
-                  <button id="global-search-button" class="btn"><span class=" icon-search"></span></button>
-                  <a class="btn dropdown-toggle last" data-toggle="dropdown" href="#"><b class="caret"></b></a>
-                  <ul class="dropdown-menu scoped-search-options">
-                    <li><a href="#" data-type=""><%= I18n.t("navbar.search_all") %></a></li>
-                    <li class="divider"></li>
-                    <li><a href="#" data-type="accession"><%= I18n.t("accession._html.plural") %></a></li>
-                    <li><a href="#" data-type="resource"><%= I18n.t("resource._html.plural") %></a></li>
-                    <li><a href="#" data-type="archival_object"><%= I18n.t("archival_object._html.plural") %></a></li>
-                    <li><a href="#" data-type="digital_object"><%= I18n.t("digital_object._html.plural") %></a></li>
-                  </ul>
+          <% if @repository %>
+            <li class="divider-vertical"></li>
+            <li class="dropdown browse-container">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t("actions.browse") %> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+              </ul>
+            </li>
+            <li>
+              <%= form_tag(url_for(:controller => :site, :action => :search), :method => :get, :class => "navbar-form pull-left") do %>
+                <div class="input-append">
+                  <input id="global-search-box" type="text" class="span2" placeholder="<%= I18n.t("navbar.search_placeholder") %>" name="q" value="<%= params[:q] %>"/>
+                  <div class="btn-group">
+                    <%= hidden_field_tag "type", "" %>
+                    <button id="global-search-button" class="btn"><span class=" icon-search"></span></button>
+                    <a class="btn dropdown-toggle last" data-toggle="dropdown" href="#"><b class="caret"></b></a>
+                    <ul class="dropdown-menu scoped-search-options">
+                      <li><a href="#" data-type=""><%= I18n.t("navbar.search_all") %></a></li>
+                      <li class="divider"></li>
+                      <li><a href="#" data-type="accession"><%= I18n.t("accession._html.plural") %></a></li>
+                      <li><a href="#" data-type="resource"><%= I18n.t("resource._html.plural") %></a></li>
+                      <li><a href="#" data-type="archival_object"><%= I18n.t("archival_object._html.plural") %></a></li>
+                      <li><a href="#" data-type="digital_object"><%= I18n.t("digital_object._html.plural") %></a></li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-            <% end %>
-          </li>
+              <% end %>
+            </li>
+          <% end %>
         </ul>
       </div><!-- /.nav-collapse -->
     </div>
