--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -7,7 +7,7 @@
   <div class="span9">
     <div class="record-pane">
       <div class="btn-group pull-right">
-        <% if user_can?('update_repository') %>
+        <% if user_can?('update_archival_record') %>
           <%= link_to "Create Accession", {:controller => :accessions, :action => :new}, :class => "btn" %>
         <% end %>
       </div>
@@ -37,7 +37,7 @@
                <td>
                   <div class="btn-group" style="float: right">
                     <%= link_to I18n.t("actions.view"), {:controller => :accessions, :action => :show, :id => accession.id}, :class => "btn btn-mini" %>
-                    <% if user_can?('update_repository') and not accession.suppressed %>
+                    <% if user_can?('update_archival_record') and not accession.suppressed %>
                       <%= link_to I18n.t("actions.edit"), {:controller => :accessions, :action => :edit, :id => accession.id}, :class => "btn btn-mini" %>
                     <% end %>
                   </div>
