--- a/frontend/app/views/agents/_toolbar.html.erb
+++ b/frontend/app/views/agents/_toolbar.html.erb
@@ -1,4 +1,4 @@
-<% if user_can?('update_repository') %>
+<% if user_can?('update_agent_record') %>
   <div class="row-fluid">
     <div class="span12">
       <div class="record-toolbar">
