--- a/frontend/app/views/collection_management_records/index.html.erb
+++ b/frontend/app/views/collection_management_records/index.html.erb
@@ -7,7 +7,7 @@
    <div class="span9">
     <div class="record-pane">
       <div class="btn-group pull-right">
-        <% if user_can?('update_repository') %>
+        <% if user_can?('update_archival_record') %>
           <%= link_to "#{I18n.t("actions.create")} #{I18n.t("collection_management_record._html.singular")}", {:controller => :collection_management_records, :action => :new}, :class => "btn" %>
         <% end %>
       </div>
@@ -44,7 +44,7 @@
                <td>
                   <div class="btn-group" style="float: right">
                            <%= link_to I18n.t("actions.view"), {:controller => :collection_management_records, :action => :show, :id => cmr.id}, :class => "btn btn-mini" %>
-                    <% if user_can?('update_repository') %>
+                    <% if user_can?('update_archival_record') %>
                       <%= link_to I18n.t("actions.edit"), {:controller => :collection_management_records, :action => :edit, :id => cmr.id}, :class => "btn btn-mini" %>
                     <% end %>
                   </div>
