--- a/frontend/app/views/events/index.html.erb
+++ b/frontend/app/views/events/index.html.erb
@@ -7,7 +7,7 @@
    <div class="span9">
     <div class="record-pane">
       <div class="btn-group pull-right">
-        <% if user_can?('update_repository') %>
+        <% if user_can?('update_archival_record') %>
           <%= link_to "#{I18n.t("actions.create")} #{I18n.t("event._html.singular")}", {:controller => :events, :action => :new}, :class => "btn" %>
         <% end %>
       </div>
@@ -32,7 +32,7 @@
                </td>
                <td>
                   <div class="btn-group" style="float: right">
-                    <% if user_can?('update_repository') and not event.suppressed %>
+                    <% if user_can?('update_archival_record') and not event.suppressed %>
                       <%= link_to I18n.t("actions.edit"), {:controller => :events, :action => :edit, :id => event.id}, :class => "btn btn-mini" %>
                     <% end %>
                   </div>
