--- a/frontend/app/views/search/_results.html.erb
+++ b/frontend/app/views/search/_results.html.erb
@@ -29,7 +29,7 @@
               <td>
                 <div class="btn-group" style="float: right">
                   <%= link_to I18n.t("actions.view"), {:controller => :resolver, :action => :resolve_readonly, :uri => result["id"]}, :class => "btn btn-mini" %>
-                  <% if user_can?('update_repository') %>
+                  <% if false && user_can?('update_repository') %>
                     <%= link_to I18n.t("actions.edit"), {:controller => :resolver, :action => :resolve_edit, :uri => result["id"]}, :class => "btn btn-mini" %>
                   <% end %>
                 </div>
