--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -27,7 +27,7 @@
                 <li><%= link_to I18n.t("collection_management_record._html.plural"), :controller => :collection_management_records, :action => :index %></li>
               </ul>
             </li>
-            <% if user_can?('update_repository') %>
+            <% if user_can?('update_archival_record') %>
               <li class="dropdown create-container">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t("navbar.create") %> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
