--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -7,7 +7,7 @@
    <div class="span9">
     <div class="record-pane">
       <div class="btn-group pull-right">
-        <% if user_can?('update_repository') %>
+        <% if user_can?('update_subject_record') %>
           <%= link_to "#{I18n.t("actions.create")} #{I18n.t("subject._html.singular")}", {:controller => :subjects, :action => :new}, :class => "btn" %>
         <% end %>
       </div>
@@ -29,7 +29,7 @@
               <td>
                  <div class="btn-group" style="float: right">
                    <%= link_to I18n.t("actions.view"), {:controller => :subjects, :action => :show, :id => subject.id}, :class => "btn btn-mini" %>
-                   <% if user_can?('update_repository') %>
+                   <% if user_can?('update_subject_record') %>
                      <%= link_to I18n.t("actions.edit"), {:controller => :subjects, :action => :edit, :id => subject.id}, :class => "btn btn-mini" %>
                    <% end %>
                  </div>
