Fix apostrophe in json breaking linker widget; Also fix quote in value breaking inputs (via the form helper)

--- a/frontend/app/views/collection_management_records/_record_linker.html.erb
+++ b/frontend/app/views/collection_management_records/_record_linker.html.erb
@@ -16,7 +16,7 @@
              data-name="ref"
              data-path="<%= form.path %>"
              data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
-             data-selected='<%= selected_json %>'
+             data-selected="<%= selected_json %>"
              data-multiplicity="one"
              data-format_template="title"
              data-types='["accession", "resource", "digital_object"]'
