--- a/frontend/app/views/accessions/_linker.html.erb
+++ b/frontend/app/views/accessions/_linker.html.erb
@@ -1,8 +1,8 @@
 <%
    if form.obj.has_key?('_resolved')
-     selected_json =  form.obj['_resolved']
+     selected_json =  form.obj['_resolved'].to_json
    else
-     selected_json = {}
+     selected_json = "{}"
    end
 %>
 <div class="control-group">
@@ -16,7 +16,7 @@
             data-path="<%= form.path %>"
             data-name="ref"
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
-            data-selected='<%= selected_json.to_json %>'
+            data-selected="<%= selected_json %>"
             data-format_property="title"
             data-multiplicity="one"
             data-types='["accession"]'
