--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -16,7 +16,7 @@
              data-name="ref"
              data-path="<%= form.path %>"
              data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
-             data-selected='<%= selected_json %>'
+             data-selected="<%= selected_json %>"
              data-multiplicity="one"
              data-format_template="names[0].sort_name"
              data-types='["agent"]'
