--- a/frontend/app/views/agents/name_forms/_agent_family.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_family.html.erb
@@ -9,7 +9,7 @@
     <%= form.label_and_textfield "dates" %>
     <hr/>
     <%= form.label_and_textfield "qualifier" %>
-    <%= form.label_and_boolean "sort_name_auto_generate", {}, form.default_for("sort_name_auto_generate") %>
+    <%= form.label_and_textfield "sort_name", {:field_opts => {:automatable => true}}%>
     <%= form.label_and_textfield "sort_name" %>
     <hr/>
     <%= form.label_and_textfield "description_type" %>
