WIP refactor instances to handle digital objects

--- a/frontend/app/views/container/_template.html.erb
+++ b/frontend/app/views/container/_template.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial=>"container_locations/template" %>
 
 <% define_template "container", jsonmodel_definition(:container) do |form| %>
-  <section class="subrecord-form">
+  <section class="subrecord-form container-fields">
     <h4 class="subrecord-form-heading"><%= I18n.t("container._html.singular") %></h4>
     <div class="subrecord-form-container">
       <div class="subrecord-form-fields">
