--- a/frontend/app/views/instances/_template.html.erb
+++ b/frontend/app/views/instances/_template.html.erb
@@ -1,19 +1,22 @@
 <%= render :partial => "container/template" %>
 
+
 <% define_template "instance_digital_object", jsonmodel_definition(:instance) do |form| %>
   <section class="subrecord-form">
     <h4 class="subrecord-form-heading"><%= I18n.t("digital_object._html.singular") %></h4>
     <div class="subrecord-form-container">
       <div class="subrecord-form-fields">
-        Wooo
+        <%= render :partial => "digital_objects/linker", :locals => {:form => form} %>
       </div>
     </div>
   </section>
 <% end %>
 
+
 <% define_template "instance_empty" do |form| %>
   <div class="alert alert-warning">Please select an instance type</div>
 <% end %>
+
 
 <% define_template "instance", jsonmodel_definition(:instance) do |form| %>
   <div class="subrecord-form-fields">
@@ -34,8 +37,10 @@
         <%= form.fields_for(form["container"], "container") do |item| %>
           <% form.emit_template("container", item) %>
         <% end %>
-      <% elsif  %>
-        <% form.emit_template("instance_digital_object", form.obj) %>
+      <% elsif form["instance_type"] === "digital_object" %>
+        <%= form.fields_for(form["digital_object"] || {}, "digital_object") do |item| %>
+          <% form.emit_template("instance_digital_object", item) %>
+        <% end %>
       <% else %>
         <% form.emit_template("instance_empty") %>
       <% end %>
