--- a/frontend/app/views/instances/_show.html.erb
+++ b/frontend/app/views/instances/_show.html.erb
@@ -17,7 +17,9 @@
               <%= I18n.t("instance.instance_type_#{instance['instance_type']}") %>
             </div>
             <div class="span7">
-              <% if instance["container"].length > 0 %>
+              <% if instance["instance_type"] === "digital_object" %>
+                <%= instance["digital_object"]["_resolved"]["title"] %>
+              <% elsif instance["container"] and instance["container"].length > 0 %>
                 <%= instance["container"]["type_1"] %>
               <% end %>
             </div>
@@ -25,7 +27,18 @@
         </div>
         <div id="instance_<%= index %>" class="accordion-body collapse">
           <%= read_only_view(instance.to_hash) %>
-          <% if instance["container"].length > 0 %>
+          <% if instance["instance_type"] === "digital_object" %>
+            <div class="control-group">
+              <div class="control-label"><%= I18n.t("instance.digital_object") %></div>
+              <div class="controls token-list">
+                <%= render_token :object => instance["digital_object"]["_resolved"],
+                                 :label => instance["digital_object"]["_resolved"]["title"],
+                                 :type => "digital_object",
+                                 :uri => instance["digital_object"]["ref"],
+                                 :placement => "top" %>
+              </div>
+            </div>
+          <% elsif instance["container"] and instance["container"].length > 0 %>
             <%= render :partial => "container/show", :locals => { :container => instance["container"], :id => "instance_#{index}_container" } %>
           <% end %>
         </div>
