Enhance subrecord_form partial to allow custom action - used to implement typed template insertion for instances

--- a/frontend/app/views/notes/_template.html.erb
+++ b/frontend/app/views/notes/_template.html.erb
@@ -91,7 +91,7 @@
                 <li>
                   <select>
                     <% multipart_subnote_types.sort.each do |type| %>
-                      <option value="<%= type %>"><%= I18n.t("notes.#{type}.option") %></option>
+                      <option value="<%= type %>"><%= I18n.t("#{type}.option") %></option>
                     <% end %>
                   </select>
                 </li>
