--- a/frontend/app/views/instances/_template.html.erb
+++ b/frontend/app/views/instances/_template.html.erb
@@ -1,15 +1,33 @@
 <%= render :partial => "container/template" %>
 
+<% define_template "instance_container", jsonmodel_definition(:instance) do |form| %>
+  <div class="subrecord-form-fields">
+    <h4 class="subrecord-form-heading">
+      <% if form["instance_type"] %>
+        <%= I18n.t("instance.instance_type_#{form.obj["instance_type"]}") %>
+      <% end %>
+    </h4>
+    <div class="subrecord-form-container">
+      <%= form.fields_for(form["container"] || {}, "container") do |item| %>
+        <% form.emit_template("container", item) %>
+      <% end %>
+    </div>
+  </div>
+<% end %>
 
 <% define_template "instance_digital_object", jsonmodel_definition(:instance) do |form| %>
-  <section class="subrecord-form">
-    <h4 class="subrecord-form-heading"><%= I18n.t("digital_object._html.singular") %></h4>
+  <div class="subrecord-form-fields">
+    <h4 class="subrecord-form-heading">
+      <% if form["instance_type"] %>
+        <%= I18n.t("instance.instance_type_#{form.obj["instance_type"]}") %>
+      <% end %>
+    </h4>
     <div class="subrecord-form-container">
-      <div class="subrecord-form-fields">
+      <%= form.fields_for(form["digital_object"] || {}, "digital_object") do |item| %>
         <%= render :partial => "digital_objects/linker", :locals => {:form => form} %>
-      </div>
+      <% end %>
     </div>
-  </section>
+  </div>
 <% end %>
 
 
@@ -18,32 +36,18 @@
 <% end %>
 
 
+<% define_template "instance_type", jsonmodel_definition(:instance) do |form| %>
+  <%= form.hidden_input "instance_type" %>
+<% end %>
+
+
 <% define_template "instance", jsonmodel_definition(:instance) do |form| %>
-  <div class="subrecord-form-fields">
-    <% if form.obj["instance_type"] %>
-      <div class="control-group required">
-        <label class="control-label"><%= I18n.t("instance.instance_type") %></label>
-        <div class="controls  label-only">
-          <%= I18n.t("instance.instance_type_#{form.obj["instance_type"]}") %>
-          <%= form.hidden_input "instance_type" %>
-        </div>
-      </div>
-    <% else %>
-      <%= form.label_and_select "instance_type", form.possible_options_for("instance_type", true), :field_opts => {:add_empty_option => true} %>
-    <% end %>
-    <br/>
-    <div class="instance-container-or-digital-object">
-      <% if form["container"] %>
-        <%= form.fields_for(form["container"], "container") do |item| %>
-          <% form.emit_template("container", item) %>
-        <% end %>
-      <% elsif form["instance_type"] === "digital_object" %>
-        <%= form.fields_for(form["digital_object"] || {}, "digital_object") do |item| %>
-          <% form.emit_template("instance_digital_object", item) %>
-        <% end %>
-      <% else %>
-        <% form.emit_template("instance_empty") %>
-      <% end %>
-    </div>
-  </div>
+  <% form.emit_template("instance_type", form.obj) %>
+  <% if form["container"] %>
+    <% form.emit_template("instance_container") %>
+  <% elsif form["instance_type"] === "digital_object" %>
+    <% form.emit_template("instance_digital_object") %>
+  <% else %>
+    <% form.emit_template("instance_empty") %>
+  <% end %>
 <% end %>
