--- a/frontend/app/views/shared/_subrecord_form.html.erb
+++ b/frontend/app/views/shared/_subrecord_form.html.erb
@@ -5,15 +5,20 @@
   template = singular if template.blank?
   template_erb = "#{name.to_s}/template" if template_erb.blank?
   js_template_name = "template_#{template}" if js_template_name.blank?
+  custom_action_template = false if custom_action_template.blank?
 %>
 
 <%= render :partial=>template_erb, :locals => {:form => form} %>
 
-<section id="<%= section_id %>" class="subrecord-form" data-subrecord-form="true" data-object-name="<%= singular %>" data-template="<%= js_template_name %>">
+<section id="<%= section_id %>" class="subrecord-form" data-subrecord-form="true" data-object-name="<%= singular %>" data-template="<%= js_template_name %>" <% if custom_action_template %>data-custom-action="true"<% end %>>
 
   <<%= heading_size %> class="subrecord-form-heading">
     <%= I18n.t("#{singular}._html.plural") %>
-    <input type="button" class="btn btn-small pull-right" value="<%= I18n.t("actions.add") %> <%= I18n.t("#{singular}._html.singular") %>"/>
+    <% if custom_action_template %>
+      <%= render :partial => custom_action_template %>
+    <% else %>
+      <input type="button" class="btn btn-small pull-right" value="<%= I18n.t("actions.add") %> <%= I18n.t("#{singular}._html.singular") %>"/>
+    <% end %>
   </<%= heading_size %>>
 
   <div class="subrecord-form-container">
