--- a/frontend/app/views/container/_template.html.erb
+++ b/frontend/app/views/container/_template.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial=>"container_locations/template" %>
 
 <% define_template "container", jsonmodel_definition(:container) do |form| %>
-  <div class="subrecord-form-fields" data-type="note_singlepart">
+  <div>
     <%= form.label_and_textfield "type_1" %>
     <%= form.label_and_textfield "indicator_1" %>
     <%= form.label_and_textfield "barcode_1" %>
