--- a/frontend/app/views/enumerations/_list.html.erb
+++ b/frontend/app/views/enumerations/_list.html.erb
@@ -1,6 +1,6 @@
 <hr/>
 <div class="btn-group pull-right">
-  <%= link_to "#{I18n.t("actions.create")} Value", {:controller => :enumerations, :action => :new, :id => @enumeration["name"]}, "data-toggle" => "modal-ajax", :class=> "btn" %>
+  <%= link_to "#{I18n.t("actions.create")} Value", {:controller => :enumerations, :action => :new, :id => JSONModel(:enumeration).id_for(@enumeration["uri"])}, "data-toggle" => "modal-ajax", :class=> "btn" %>
 </div>
 
 <h2><%= I18n.t("enumeration._html.singular") %>: <%= @enumeration["name"] %></h2>
@@ -21,8 +21,8 @@
           <td><%= I18n.t("enumerations.#{@enumeration["name"]}.#{enum_value}", :default => enum_value) %></td>
           <td>
             <div class="btn-group">
-              <%= link_to I18n.t("actions.merge"), {:controller => :enumerations, :action => :delete, :id => @enumeration["name"], :merge => true, :value => enum_value}, "data-toggle" => "modal-ajax", :class=> "btn btn-mini btn-warning" %>
-              <%= link_to I18n.t("actions.delete"), {:controller => :enumerations, :action => :delete, :id => @enumeration["name"], :value => enum_value}, "data-toggle" => "modal-ajax", :class=> "btn btn-mini btn-danger" %>
+              <%= link_to I18n.t("actions.merge"), {:controller => :enumerations, :action => :delete, :id => JSONModel(:enumeration).id_for(@enumeration["uri"]), :merge => true, :value => enum_value}, "data-toggle" => "modal-ajax", :class=> "btn btn-mini btn-warning" %>
+              <%= link_to I18n.t("actions.delete"), {:controller => :enumerations, :action => :delete, :id => JSONModel(:enumeration).id_for(@enumeration["uri"]), :value => enum_value}, "data-toggle" => "modal-ajax", :class=> "btn btn-mini btn-danger" %>
             </div>
           </td>
         </tr>
