--- a/frontend/app/views/enumerations/_merge.html.erb
+++ b/frontend/app/views/enumerations/_merge.html.erb
@@ -1,9 +1,9 @@
-<%= form_for @enumeration, :as => "enumeration", :url => {:action => :destroy, :id => JSONModel(:enumeration).id_for(@enumeration["uri"])}, :html => {:class => 'form-horizontal', :id => "delete_enumeration"} do |f| %>
+<%= form_for @enumeration, :as => "enumeration", :url => {:action => :merge, :id => JSONModel(:enumeration).id_for(@enumeration["uri"])}, :html => {:class => 'form-horizontal', :id => "merge_enumeration"} do |f| %>
   <%= form_context :enumeration, @enumeration do |form| %>
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal">×</button>
       <h3>
-        <%= I18n.t("actions.delete") %> <%= I18n.t("enumeration._html.singular") %>
+        <%= I18n.t("actions.merge") %> <%= I18n.t("enumeration._html.singular") %>
       </h3>
     </div>
     <div class="modal-body">
@@ -23,29 +23,35 @@
             <%= form.hidden_input :value, @value %>
           </div>
         </div>
+        <div class="control-group required">
+          <label class="control-label" for="enum_selector">Merge Into</label>
+          <div class="controls">
+            <%= select_tag "merge_into", options_for_select(@enumeration["values"].reject{|v| v === @value}, @merge) %>
+          </div>
+        </div>
       </fieldset>
     </div>
     <div class="modal-footer">
-      <input class="btn btn-danger" type="submit" name="commit" value="<%= I18n.t("actions.delete") %> <%= I18n.t("enumeration._html.singular") %>" />
+      <input class="btn btn-warning" type="submit" name="commit" value="<%= I18n.t("actions.merge") %> <%= I18n.t("enumeration._html.singular") %>" />
       <button class="btn btn-cancel" data-dismiss="modal"><%= I18n.t("actions.cancel") %></button>
     </div>
   <% end %>
 <% end %>
 
 <script>
-  $('form#delete_enumeration').ajaxForm({
+  $('form#merge_enumeration').ajaxForm({
     beforeSubmit: function() {
-      $(".btn-danger", 'form#delete_enumeration').attr("disabled","disabled");
+      $(".btn-danger", 'form#merge_enumeration').attr("disabled","disabled");
     },
     success: function(response, status, xhr) {
       if (response === "Success") {
         document.location.reload(true);
       } else {
-        $('form#delete_enumeration').replaceWith(response);
+        $('form#merge_enumeration').replaceWith(response);
       }
     },
     error: function(obj, errorText, errorDesc) {
-      $(".btn-danger", 'form#delete_enumeration').removeAttr("disabled");
+      $(".btn-danger", 'form#merge_enumeration').removeAttr("disabled");
     }
   });
 </script>
