--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -14,6 +14,7 @@
           <% if @resource.id_0 %><%= readonly.label_and_fourpartid %><% end %>
           <%= readonly.label_and_select "level", readonly.possible_options_for("level", true) %>
           <%= readonly.label_and_textfield "other_level" %>
+          <%= readonly.label_and_select "resource_type", readonly.possible_options_for("resource_type", true) %>
           <%= readonly.label_and_select "language", readonly.possible_options_for("language", true) %>
           <%= readonly.label_and_textarea "container_summary" %>
           <%= readonly.label_and_boolean "publish" %>
