--- a/frontend/app/views/subjects/show.html.erb
+++ b/frontend/app/views/subjects/show.html.erb
@@ -16,6 +16,7 @@
         <h3><%= I18n.t("subject._html.section.basic_information") %></h3>
 
         <%= readonly.label_and_textfield "ref_id" %>
+        <%= readonly.label_and_select "source", readonly.possible_options_for("source", true) %>
       </section>
     
       <section id="terms" class="subrecord-form-dummy">
