Fix instance type translation

--- a/frontend/app/views/instances/_show.html.erb
+++ b/frontend/app/views/instances/_show.html.erb
@@ -14,7 +14,7 @@
               <span class="icon-chevron-down"></span>
             </div>
             <div class="span3">
-              <%= I18n.t("instance.instance_type_#{instance['instance_type']}") %>
+              <%= I18n.t("enumerations.instance_instance_type.#{instance['instance_type']}") %>
             </div>
             <div class="span7">
               <% if instance["instance_type"] === "digital_object" %>
